# Cline

./: README.md  pyproject.toml
.clinerules/: communication-style.md  project-rule.md
.clinerules/workflows/: create_pr_for_lambda.md  daily-changelog.md  pr-review.md
src/common/: calc_price.py  config.py  get_user.py
src/myapp/: app.py
test/common/: test_config.py
test/myapp/: test_app.py  test_app_2.py
