[project]
name = "myapp"
version = "0.0.1"
requires-python = "~=3.13.11"
dependencies = [
  "boto3~=1.42",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-mock"
]
